--- a/index.html
+++ b/index.html
@@ -3,28 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Premier Site Web</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Mon Site Conteneurisé</title>
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-
     <header>
-        <h1>Bienvenue sur Mon Site</h1>
+        <h1>Site Dockerisé en HTML/CSS/JS</h1>
     </header>
-
     <main>
-        <section id="accueil">
-            <h2>À Propos de Ce Site</h2>
-            <p>Ce site est une démo utilisant HTML, CSS et JavaScript. Cliquez sur le bouton ci-dessous !</p>
-            <button id="monBouton">Cliquez-moi</button>
-            <p id="message" class="cache"></p>
-        </section>
+        <p>Ce site est servi par un conteneur Nginx.</p>
+        <button id="monBouton">Tester JavaScript</button>
+        <p id="message" class="cache"></p>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Mon Site. Tous droits réservés.</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
